uipath-commons/main/default/objects/Address__c/fields/Account__c.field-meta.xml
<CustomField>
        <fullName>Account__c</fullName>
        <description>Parent Account</description>
        <inlineHelpText>Parent Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>