uipath-commons/main/default/objects/Address__c/fields/Account_Legal__c.field-meta.xml
<CustomField>
        <fullName>Account_Legal__c</fullName>
        <formula>Account__r.Legal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Entity Name</label>
        <type>Text</type>
    </CustomField>