uipath-commons/main/default/objects/Address__c/fields/Address_ID_Long__c.field-meta.xml
<CustomField>
    <fullName>Address_ID_Long__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address ID Long</label>
    <type>Text</type>
</CustomField>