uipath-commons/main/default/objects/Address__c/fields/Attention__c.field-meta.xml
<CustomField>
        <fullName>Attention__c</fullName>
        <description>Used to capture the department name</description>
        <label>Attention</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>