uipath-commons/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>