uipath-commons/main/default/objects/Address__c/fields/Country__c.field-meta.xml
<CustomField>
        <fullName>Country__c</fullName>
        <description>Country with ISO Codes</description>
        <inlineHelpText>Country with ISO Codes</inlineHelpText>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Global_List</valueSetName>
        </valueSet>
    </CustomField>