uipath-commons/main/default/objects/Address__c/fields/D_B_Address__c.field-meta.xml
<CustomField>
        <fullName>D_B_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag is true if address is sourced from D&amp;B</description>
        <label>D&amp;B Address</label>
        <type>Checkbox</type>
    </CustomField>