uipath-commons/main/default/objects/Address__c/fields/GSTIN_India_only__c.field-meta.xml
<CustomField>
        <fullName>GSTIN_India_only__c</fullName>
        <label>GSTIN (India only)</label>
        <length>15</length>
        <type>Text</type>
    </CustomField>