uipath-commons/main/default/objects/Address__c/fields/JP_Attention_2__c.field-meta.xml
<CustomField>
        <fullName>JP_Attention_2__c</fullName>
        <description>Used by Japan to store contact person details</description>
        <label>Attention 2</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>