uipath-commons/main/default/objects/Address__c/fields/NS_Address_Internal_ID__c.field-meta.xml
<CustomField>
        <fullName>NS_Address_Internal_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>NetSuite unique internal record Id for the address record</description>
        <externalId>true</externalId>
        <inlineHelpText>NetSuite unique internal record Id for the address record</inlineHelpText>
        <label>NS Address Internal ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>