uipath-commons/main/default/objects/Address__c/fields/NS_Customer_Internal_ID__c.field-meta.xml
<CustomField>
        <fullName>NS_Customer_Internal_ID__c</fullName>
        <description>Parent Account&#39;s NetSuite Customer Internal Id</description>
        <formula>Account__r.NS_Customer_Internal_ID__c</formula>
        <inlineHelpText>Parent Account&#39;s NetSuite Customer Internal Id</inlineHelpText>
        <label>NS Customer Internal ID</label>
        <type>Text</type>
    </CustomField>