uipath-commons/main/default/objects/Address__c/fields/Primary_Billing__c.field-meta.xml
<CustomField>
        <fullName>Primary_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To note the primary billing address on the Account</description>
        <inlineHelpText>Check the box if this is the primary billing address on the Account. Account can have only one primary billing Address at a time</inlineHelpText>
        <label>Primary Billing</label>
        <type>Checkbox</type>
    </CustomField>