uipath-commons/main/default/objects/Address__c/fields/Primary_Shipping__c.field-meta.xml
<CustomField>
        <fullName>Primary_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To note the primary shipping address on the Account</description>
        <inlineHelpText>Check the box if this is the primary shipping address on the Account. Account can have only one primary shipping Address at a time</inlineHelpText>
        <label>Primary Shipping</label>
        <type>Checkbox</type>
    </CustomField>