uipath-commons/main/default/objects/Address__c/fields/State__c.field-meta.xml
<CustomField>
        <fullName>State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>States_Global_List</valueSetName>
        </valueSet>
    </CustomField>