uipath-commons/main/default/objects/Address__c/fields/State_Local__c.field-meta.xml
<CustomField>
        <fullName>State_Local__c</fullName>
        <formula>CASE(  State__c , 
&quot;Tokyo&quot;,&quot;東京都&quot;,  
&quot;Aichi&quot;,&quot;愛知県&quot;,  
&quot;Akita&quot;,&quot;秋田県&quot;,  
&quot;Aomori&quot;,&quot;青森県&quot;,  
&quot;Chiba&quot;,&quot;千葉県&quot;,  
&quot;Ehime&quot;,&quot;愛媛県&quot;,  
&quot;Fukui&quot;,&quot;福井県&quot;,  
&quot;Fukuoka&quot;,&quot;福岡県&quot;,  
&quot;Fukushima&quot;,&quot;福島県&quot;,  
&quot;Gifu&quot;,&quot;岐阜県&quot;,  
&quot;Gunma&quot;,&quot;群馬県&quot;,  
&quot;Hiroshima&quot;,&quot;広島県&quot;,  
&quot;Hokkaidō&quot;,&quot;北海道&quot;,  
&quot;Hyōgo&quot;,&quot;兵庫県&quot;,  
&quot;Ibaraki&quot;,&quot;茨城県&quot;,  
&quot;Ishikawa&quot;,&quot;石川県&quot;,  
&quot;Iwate&quot;,&quot;岩手県&quot;,  
&quot;Kagawa&quot;,&quot;香川県&quot;,  
&quot;Kagoshima&quot;,&quot;鹿児島県&quot;,  
&quot;Kanagawa&quot;,&quot;神奈川県&quot;,  
&quot;Kochi&quot;,&quot;高知県&quot;,  
&quot;Kumamoto&quot;,&quot;熊本県&quot;,  
&quot;Kyoto&quot;,&quot;京都府&quot;,  
&quot;Mie&quot;,&quot;三重県&quot;, 
&quot;Miyagi&quot;,&quot;宮城県&quot;,  
&quot;Miyazaki&quot;,&quot;宮崎県&quot;, 
&quot;Nagano&quot;,&quot;長野県&quot;,  
&quot;Nagasaki&quot;,&quot;長崎県&quot;, 
&quot;Nara&quot;,&quot;奈良県&quot;,  
&quot;Niigata&quot;,&quot;新潟県&quot;, 
&quot;Ōita&quot;,&quot;大分県&quot;,  
&quot;Okayama&quot;,&quot;岡山県&quot;, 
&quot;Okinawa&quot;,&quot;沖縄県&quot;,  
&quot;Osaka&quot;,&quot;大阪府&quot;, 
&quot;Saga&quot;,&quot;佐賀県&quot;, 
&quot;Saitama&quot;,&quot;埼玉県&quot;, 
&quot;Shiga&quot;,&quot;滋賀県&quot;, 
&quot;Shimane&quot;,&quot;島根県&quot;, 
&quot;Shizuoka&quot;,&quot;静岡県&quot;, 
&quot;Tochigi&quot;,&quot;栃木県&quot;, 
&quot;Tokushima&quot;,&quot;徳島県&quot;, 
&quot;Tottori&quot;,&quot;鳥取県&quot;, 
&quot;Toyama&quot;,&quot;富山県&quot;, 
&quot;Wakayama&quot;,&quot;和歌山県&quot;, 
&quot;Yamagata&quot;,&quot;山形県&quot;, 
&quot;Yamaguchi&quot;,&quot;山口県&quot;, 
&quot;Yamanashi&quot;,&quot;山梨県&quot;, 
&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State (Local)</label>
        <type>Text</type>
    </CustomField>