uipath-commons/main/default/objects/Address__c/fields/Street_Line_1__c.field-meta.xml
<CustomField>
        <fullName>Street_Line_1__c</fullName>
        <description>Address Street</description>
        <inlineHelpText>Address Street</inlineHelpText>
        <label>Street Line 1</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>