uipath-commons/main/default/objects/Address__c/fields/Street_Line_2__c.field-meta.xml
<CustomField>
        <fullName>Street_Line_2__c</fullName>
        <description>Street Address</description>
        <inlineHelpText>Street Address Line 2</inlineHelpText>
        <label>Street Line 2</label>
        <length>105</length>
        <type>Text</type>
    </CustomField>