uipath-commons/main/default/objects/Address__c/fields/Sync_Error_Details__c.field-meta.xml
<CustomField>
        <fullName>Sync_Error_Details__c</fullName>
        <description>Details the error when Sync Status is set to Error</description>
        <inlineHelpText>Error Message received from NetSuite or Boomi on Sync Failure. This is set when the Sync Status is set to Error</inlineHelpText>
        <label>Sync Error Details</label>
        <length>9000</length>
        <type>LongTextArea</type>
    </CustomField>