uipath-commons/main/default/objects/Address__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
        <fullName>Sync_Status__c</fullName>
        <description>Sync Status to indicate the integration status</description>
        <inlineHelpText>Sync Status to indicate the integration status</inlineHelpText>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sync_Status</valueSetName>
        </valueSet>
    </CustomField>