uipath-commons/main/default/objects/Address__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
        <fullName>Validation_Status__c</fullName>
        <description>Used by the Data Stewards to flag the Account validation status</description>
        <inlineHelpText>Used by the Data Stewards to flag the Account validation status. When Data Stewards set the status to &quot;Validated&quot; call to boomi integration will be made</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Data_Steward_Validation_Status</valueSetName>
        </valueSet>
    </CustomField>