uipath-commons/main/default/objects/Address__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip/Postal Code</description>
        <inlineHelpText>Zip/Postal Code</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>