uipath-commons/main/default/objects/Address__c/recordTypes/Edit.recordType-meta.xml
<RecordType>
        <fullName>Edit</fullName>
        <active>true</active>
        <description>Record type to be assigned so that address can be edited</description>
        <label>Edit</label>
    </RecordType>