uipath-commons/main/default/objects/Address__c/recordTypes/Lockdown.recordType-meta.xml
<RecordType>
        <fullName>Lockdown</fullName>
        <active>true</active>
        <description>Used for when a address should be readonly</description>
        <label>Lockdown</label>
    </RecordType>