uipath-commons/main/default/objects/Address__c/validationRules/Address_country_must_match_account_count.validationRule-meta.xml
<ValidationRule>
        <fullName>Address_country_must_match_account_count</fullName>
        <active>true</active>
        <description>Country on address should match country of related account</description>
        <errorConditionFormula>TEXT(Country__c)  &lt;&gt;  TEXT(Account__r.Country__c)</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Country on address should match country of related account</errorMessage>
    </ValidationRule>