uipath-commons/main/default/objects/Address__c/validationRules/Lock_Add_Validation_Status_to_Validated.validationRule-meta.xml
<ValidationRule>
        <fullName>Lock_Add_Validation_Status_to_Validated</fullName>
        <active>true</active>
        <description>Once the Address validation is completed by the Data Stewards and &quot;Validation Status&quot; is set to &quot;Validated&quot; integration to NetSuite is triggered. Hence no user should be able to change the Validation Status back to any other value once it is &quot;Validated&quot;</description>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Validation_Status__c), &quot;Validated&quot;),
    ISCHANGED(Validation_Status__c)
)</errorConditionFormula>
        <errorDisplayField>Validation_Status__c</errorDisplayField>
        <errorMessage>Address Validation Status cannot be changed once it is moved to &quot;Validated&quot;</errorMessage>
    </ValidationRule>