uipath-commons/main/default/objects/Address__c/validationRules/Lock_Sync_Status_Until_Address_Validated.validationRule-meta.xml
<ValidationRule>
        <fullName>Lock_Sync_Status_Until_Address_Validated</fullName>
        <active>true</active>
        <description>Sync Status should not be changed to &quot;Valid&quot; or &quot;Pending&quot; if the Validation Status on the Address is not set to &quot;Validated&quot;, so that Address info is not synced to NetSuite until Data Stewards performs the Validation</description>
        <errorConditionFormula>AND (ISCHANGED(Sync_Status__c),
     OR(ISPICKVAL(Sync_Status__c,&quot;Valid&quot;),
        ISPICKVAL(Sync_Status__c,&quot;Pending&quot;)
     ),
     NOT(ISPICKVAL(Validation_Status__c,&quot;Validated&quot;))
)</errorConditionFormula>
        <errorDisplayField>Sync_Status__c</errorDisplayField>
        <errorMessage>&quot;Sync Status&quot; cannot be set to &quot;Valid&quot; or &quot;Pending&quot; until Data Steward validates the Address and sets the &quot;Validation Status&quot; to &quot;Validated&quot;</errorMessage>
    </ValidationRule>