uipath-commons/main/default/objects/Address__c/validationRules/Mandatoy_States.validationRule-meta.xml
<ValidationRule>
        <fullName>Mandatoy_States</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISNEW(),
OR(ISPICKVAL(Country__c, &quot;China&quot;),
ISPICKVAL(Country__c, &quot;Australia&quot;), ISPICKVAL(Country__c, &quot;India&quot;)), 
ISPICKVAL(State__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>State is required for this country.</errorMessage>
    </ValidationRule>